@@ -34,8 +34,6 @@
 #include "Attribute.h"
 #include "Document.h"
 #include "EventListener.h"
-#include "Executable.h"
-#include "JSFunction.h"
 #include "JSNode.h"
 #include "Frame.h"
 #include <runtime/JSLock.h>
@@ -105,23 +103,10 @@ String eventListenerHandlerBody(Document* document, EventListener* eventListener
     return ustringToString(jsFunction->toString(scriptStateFromNode(jsListener->isolatedWorld(), document)));
 }
 
-bool eventListenerHandlerLocation(Document* document, EventListener* eventListener, String& sourceName, int& lineNumber)
+bool eventListenerHandlerLocation(Document*, EventListener*, String&, int&)
 {
-    const JSEventListener* jsListener = JSEventListener::cast(eventListener);
-    if (!jsListener)
-        return false;
-    JSC::JSObject* jsObject = jsListener->jsFunction(document);
-    if (!jsObject)
-        return false;
-    JSC::JSFunction* jsFunction = static_cast<JSFunction*>(jsObject);
-    if (!jsFunction || jsFunction->isHostFunction())
-        return false;
-    JSC::FunctionExecutable* funcExecutable = jsFunction->jsExecutable();
-    if (!funcExecutable)
-        return false;
-    lineNumber = funcExecutable->lineNo();
-    sourceName = ustringToString(funcExecutable->sourceURL());
-    return true;
+    // FIXME: Add support for getting function location.
+    return false;
 }
 
 } // namespace WebCore
